overview overflow fix and assetlist

--- a/flaskmain/static/css/output.css
+++ b/flaskmain/static/css/output.css
@@ -2269,6 +2269,10 @@ input:checked + .toggle-bg {
   border-color: rgb(255 255 255 / 0.05);
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -2522,6 +2526,15 @@ input:checked + .toggle-bg {
 
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}
+
+.bg-green-400\/10 {
+  background-color: rgb(49 196 141 / 0.1);
+}
+
+.bg-green-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 71 55 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -3079,6 +3092,16 @@ input:checked + .toggle-bg {
 .text-blue-400 {
   --tw-text-opacity: 1;
   color: rgb(118 169 250 / var(--tw-text-opacity));
+}
+
+.text-green-900 {
+  --tw-text-opacity: 1;
+  color: rgb(1 71 55 / var(--tw-text-opacity));
+}
+
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgb(5 122 85 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -3649,6 +3672,10 @@ input:checked + .toggle-bg {
 }
 
 @media (min-width: 640px) {
+  .sm\:visible {
+    visibility: visible;
+  }
+
   .sm\:-top-80 {
     top: -20rem;
   }
@@ -3858,6 +3885,10 @@ input:checked + .toggle-bg {
     margin-bottom: calc(5rem * var(--tw-space-y-reverse));
   }
 
+  .sm\:overflow-hidden {
+    overflow: hidden;
+  }
+
   .sm\:rounded-3xl {
     border-radius: 1.5rem;
   }
@@ -3900,6 +3931,11 @@ input:checked + .toggle-bg {
     padding-bottom: 12rem;
   }
 
+  .sm\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
   .sm\:pb-32 {
     padding-bottom: 8rem;
   }
@@ -3934,6 +3970,10 @@ input:checked + .toggle-bg {
 
   .sm\:pt-8 {
     padding-top: 2rem;
+  }
+
+  .sm\:pt-10 {
+    padding-top: 2.5rem;
   }
 
   .sm\:text-left {
@@ -3981,6 +4021,11 @@ input:checked + .toggle-bg {
 
   .sm\:ring-gray-900\/10 {
     --tw-ring-color: rgb(17 24 39 / 0.1);
+  }
+
+  .sm\:visited\:py-2:visited {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 }
 
@@ -4099,6 +4144,10 @@ input:checked + .toggle-bg {
 }
 
 @media (min-width: 1024px) {
+  .lg\:visible {
+    visibility: visible;
+  }
+
   .lg\:static {
     position: static;
   }
@@ -4166,6 +4215,14 @@ input:checked + .toggle-bg {
 
   .lg\:w-96 {
     width: 24rem;
+  }
+
+  .lg\:w-1\/5 {
+    width: 20%;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
   }
 
   .lg\:max-w-4xl {
